DEX-26796 | fix: margin and elements alignment

--- a/_src-lp/blocks/columns/columns.scss
+++ b/_src-lp/blocks/columns/columns.scss
@@ -844,7 +844,7 @@ main .columns-container.padding-0 .columns-wrapper {
 }
 
 .columns-container.v-nov25 .columns > div:not(:first-of-type) p {
-  margin: 0;
+  margin: 8px 0;
 }
 
 .columns-container.v-nov25 .columns > div:not(:first-of-type) p img, .columns-container.v-nov25 .columns > div:not(:first-of-type) table img {
